Improve How It Works visuals and clarity - spell out sum-of-the-parts

--- a/env.local.example
+++ b/env.local.example
@@ -1,9 +1,9 @@
 # Firebase Web App Configuration
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAk_JtlD2CwdjETSWOoWWWx0jl0uOqUCpo
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=unbundle-4b624.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
-NEXT_PUBLIC_FIREBASE_APP_ID=your_firebase_app_id
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=unbundle-4b624
+NEXT_PUBLIC_FIREBASE_APP_ID=1:137415390784:web:0b4484ace9adc6305b91a5
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-F0VW3GT40R
 
 # Firebase Functions Region
 NEXT_PUBLIC_FUNCTIONS_REGION=us-central1
