--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,12 @@
 {
+  "firestore": {
+    "rules": "firebase/firestore.rules",
+    "indexes": "firebase/firestore.indexes.json"
+  },
+  "functions": {
+    "source": "functions",
+    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run build"]
+  },
   "emulators": {
     "functions": {
       "port": 5001
