--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,39 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+target/
+.anchor/
 
-# Next.js
-.next/
-out/
-build/
-dist/
-
-# Environment variables
+# Environment
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.log
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Logs
-*.log
+# Build outputs
+dist/
+*.wasm
+app/.next/
+app/out/
+.next/
 
-# Firebase
-.firebase/
-firebase-debug.log
-firebase-debug.*.log
+# Test
+coverage/
+.nyc_output/
 
-# Misc
-*.tsbuildinfo
+# Config
+app/config/mints.json
+
+# Solana CLI
+solana-release/
+*.exe
+*.tar.bz2
