--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "unbundle-finance",
-  "version": "0.1.0",
+  "name": "unbundle-demo",
+  "version": "1.0.0",
   "private": true,
+  "workspaces": [
+    "app",
+    "programs/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.7.0",
-    "@vercel/analytics": "^1.2.1",
-    "clsx": "^2.1.1",
-    "firebase": "^10.12.2",
-    "framer-motion": "^11.18.2",
-    "lucide-react": "^0.400.0",
-    "next": "14.2.5",
-    "posthog-js": "^1.134.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
-    "tailwind-merge": "^2.4.0",
-    "zod": "^3.23.8"
+    "dev": "npm run dev --workspace=app",
+    "build": "npm run build --workspace=app",
+    "start": "npm run start --workspace=app",
+    "build:anchor": "anchor build",
+    "test": "anchor test --skip-local-validator",
+    "deploy": "anchor deploy",
+    "lint": "eslint . --ext .ts,.tsx",
+    "create-mints": "tsx scripts/create_mints.ts",
+    "init-faucet": "tsx scripts/initialize_faucet.ts",
+    "init-split": "tsx scripts/initialize_split.ts"
   },
   "devDependencies": {
-    "@types/node": "^20.14.9",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3"
+    "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
+    "eslint": "^8.54.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
+  },
+  "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
+    "@solana/spl-token": "^0.3.9",
+    "@solana/web3.js": "^1.87.6",
+    "bs58": "^5.0.0",
+    "clsx": "^2.1.1",
+    "posthog-js": "^1.284.0",
+    "tailwind-merge": "^3.3.1"
   }
 }
