--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,8 @@
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "firebase": "^12.5.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.552.0",
     "next": "14.0.4",
     "posthog-js": "^1.284.0",
     "react": "^18.2.0",
