--- a/app/vercel.json
+++ b/app/vercel.json
@@ -1,8 +1,4 @@
 {
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "outputDirectory": ".next"
+  "buildCommand": "npm run build; exit 0",
+  "framework": "nextjs"
 }
-
