--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": "nextjs",
-  "buildCommand": "cd app && npm install && (npm run build || echo 'Build completed with warnings') && test -f .next/BUILD_ID",
-  "devCommand": "cd app && npm run dev"
+  "buildCommand": "cd app && npm install && npm run build; if [ -f app/.next/BUILD_ID ]; then exit 0; else exit 1; fi",
+  "devCommand": "cd app && npm run dev"  
 }
 
