--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "framework": "nextjs",
+  "framework": null,
   "buildCommand": "npm install && node build-wrapper.js",
-  "devCommand": "npm run dev"
+  "devCommand": "npm run dev",
+  "outputDirectory": ".next"
 }
 
