Use build wrapper as default build script

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,4 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    }
-  ],
-  "buildCommand": "npm install && node build-wrapper.js",
-  "outputDirectory": ".next"
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
 
