--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
     "@hookform/resolvers": "^5.2.2",
+    "@sinclair/typebox": "0.31.28",
     "@solana/spl-token": "^0.3.9",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
@@ -23,6 +24,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "next": "14.0.4",
+    "pino-pretty": "^13.1.2",
     "posthog-js": "^1.284.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,5 +43,8 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.0"
+  },
+  "overrides": {
+    "@sinclair/typebox": "0.31.28"
   }
 }
