--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "clsx": "^2.1.1",
     "posthog-js": "^1.284.0",
     "tailwind-merge": "^3.3.1"
+  },
+  "overrides": {
+    "@sinclair/typebox": "0.31.28"
   }
 }
